[package]
name = "pepe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
async-trait = "0.1.68"
ezsockets = { version = "0.5.1", features = ["tungstenite"] }
tokio = { version = "1.28.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
reqwest = "0.11.18"
serde_json = "1.0.96"
serde = { version = "1.0.163", features = ["derive"] }
regex = "1.8.1"
chrono-tz = "0.8.2"
lazy_static = "1.4.0"
clap = { version = "4.3.0", features = ["derive"] }
